--- a/frontend/lecturer-dashboard.html
+++ b/frontend/lecturer-dashboard.html
@@ -50,7 +50,7 @@
 </span>
 </button>
 <div class="h-9 w-9 rounded-full overflow-hidden border-2 border-primary/20">
-<img alt="Lecturer Profile Small" src="https://lh3.googleusercontent.com/aida-public/AB6AXuALWuF6B5oX9ygl8OyWrBzwQ5hcxBZfSmOfVC2mhbqNuZydzqe-vKZ9WSckygK9rL6x0ziev2B08UbefEelTkqB5VDxMRfESSF0_5ISWheGiSRb83eXQgtKBICXptyJbqXp5lRAz-_Cd8I9CM2YUYR0i4nSNxJvyCJB6r9TYRaxUm-JRxlHhDwYej-YeryjUpQb5GbK8kmSRFqOw94ONvM5Lnq9qSyQ5rI2QR7pTUtHLtvBRTaoGpWTW-9kQoxsue3uziHWW_37jXU"/>
+<img alt="Lecturer Profile Small" src="public/images/lec.jpeg"/>
 </div>
 </div>
 </div>
@@ -139,7 +139,7 @@
 <div class="flex flex-col md:flex-row items-center md:items-start gap-6 bg-white dark:bg-slate-800 p-8 rounded-2xl shadow-sm border border-slate-100 dark:border-slate-700">
 <div class="relative group">
 <div class="absolute -inset-1 bg-gradient-to-r from-primary to-blue-400 rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000 group-hover:duration-200"></div>
-<img alt="Dr. Kasun Perera" class="relative w-32 h-32 md:w-40 md:h-40 rounded-full object-cover border-4 border-white dark:border-slate-800 shadow-xl" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAGiN8xk7WHyCMcrBtHbsMxunI_Y8cGGe_kKp5Gc7MkS-oKoDEzd7xwpCcFZ782waVQYxiR4kfI4Xvr3p5PWu4bHxEYMh7Rbv5NKnCawUyJBlyCdbt5ZEjtIIF8uPlnn0peVx6aEf7I-kDU1nG9yF2C5ph-aK4k7MyxOKqcoWwHu4myIEUfdr0RSMKgjdEIWCqybvrqswvxLDEVvoVIhcbppNRmTdocOCFN6xM5k8aTGcMStSe9gd5ZdTYkfTbxNeWN5qwBOfAsRx8"/>
+<img alt="Dr. Kasun Perera" class="relative w-32 h-32 md:w-40 md:h-40 rounded-full object-cover border-4 border-white dark:border-slate-800 shadow-xl" src="public/images/lec.jpeg"/>
 </div>
 <div class="text-center md:text-left space-y-1">
 <h1 class="text-3xl font-extrabold text-slate-900 dark:text-white">Dr. Kasun Perera</h1>
@@ -160,20 +160,20 @@
 <h2 class="text-xl font-bold dark:text-white">Lecturer Profile Information</h2>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-<div class="bg-white dark:bg-slate-800 p-6 rounded-xl shadow-sm border border-slate-100 dark:border-slate-700 hover:shadow-md transition-shadow">
+<div class="bg-slate-200 dark:bg-slate-700 p-6 rounded-xl shadow-sm border border-slate-200 dark:border-slate-600 hover:shadow-md transition-shadow">
 <p class="text-xs font-bold text-slate-400 uppercase tracking-wider mb-2">Department</p>
 <p class="text-lg font-semibold text-slate-800 dark:text-slate-200">Oral Pathology</p>
 <p class="text-sm text-slate-500 mt-2">University of Peradeniya, SL</p>
 </div>
-<div class="bg-white dark:bg-slate-800 p-6 rounded-xl shadow-sm border border-slate-100 dark:border-slate-700 hover:shadow-md transition-shadow">
+<div class="bg-slate-200 dark:bg-slate-700 p-6 rounded-xl shadow-sm border border-slate-200 dark:border-slate-600 hover:shadow-md transition-shadow">
 <p class="text-xs font-bold text-slate-400 uppercase tracking-wider mb-2">Email</p>
 <p class="text-lg font-semibold text-slate-800 dark:text-slate-200">samadaras@pdn.ac.lk</p>
 <a class="text-xs font-medium text-primary mt-2 inline-block hover:underline" href="mailto:samadaras@pdn.ac.lk">Send email</a>
 </div>
-<div class="bg-white dark:bg-slate-800 p-6 rounded-xl shadow-sm border border-slate-100 dark:border-slate-700 hover:shadow-md transition-shadow">
+<div class="bg-slate-200 dark:bg-slate-700 p-6 rounded-xl shadow-sm border border-slate-200 dark:border-slate-600 hover:shadow-md transition-shadow">
 <p class="text-xs font-bold text-slate-400 uppercase tracking-wider mb-2">Office Hours</p>
 <p class="text-lg font-semibold text-slate-800 dark:text-slate-200">Tue, Wed &amp; Fri</p>
-<p class="text-sm text-slate-500 mt-2">10:00 AM - 02:00 PM</p>
+<p class="text-sm text-slate-500 mt-2">08:00 AM - 02:00 PM</p>
 </div>
 </div>
 </section>
@@ -186,7 +186,7 @@
 <a class="text-sm font-medium text-primary hover:underline" href="#">View All</a>
 </div>
 <div class="grid gap-4">
-<div class="bg-white dark:bg-slate-800 p-5 rounded-xl flex items-center justify-between border-l-4 border-orange-500 shadow-sm">
+<div class="bg-slate-100 dark:bg-slate-700 p-5 rounded-xl flex items-center justify-between border-l-4 border-orange-500 shadow-sm">
 <div class="space-y-1">
 <p class="font-semibold dark:text-white">Drafted student submission check</p>
 <p class="text-sm text-slate-500">Submission ID - IM098273</p>
@@ -196,7 +196,7 @@
 <span class="text-xs px-2 py-0.5 bg-orange-100 dark:bg-orange-900/30 text-orange-600 dark:text-orange-400 rounded-full">Draft</span>
 </div>
 </div>
-<div class="bg-white dark:bg-slate-800 p-5 rounded-xl flex items-center justify-between border-l-4 border-orange-500 shadow-sm">
+<div class="bg-slate-100 dark:bg-slate-700 p-5 rounded-xl flex items-center justify-between border-l-4 border-orange-500 shadow-sm">
 <div class="space-y-1">
 <p class="font-semibold dark:text-white">Drafted student submission check</p>
 <p class="text-sm text-slate-500">Submission ID - IM058840</p>
@@ -239,7 +239,7 @@
 </section>
 </div>
 <aside class="w-full xl:w-80 shrink-0">
-<div class="sticky top-24 bg-white dark:bg-slate-800 rounded-2xl border border-slate-200 dark:border-slate-700 shadow-xl overflow-hidden">
+<div class="sticky top-24 bg-slate-100 dark:bg-slate-700 rounded-2xl border border-slate-200 dark:border-slate-600 shadow-xl overflow-hidden">
 <div class="p-6 bg-primary">
 <div class="flex items-center justify-between text-white">
 <h3 class="text-lg font-bold">Notifications</h3>
