--- a/frontend/lecturer-eva-submissions1.html
+++ b/frontend/lecturer-eva-submissions1.html
@@ -63,7 +63,7 @@
 </span>
 </button>
 <div class="h-9 w-9 rounded-full overflow-hidden border-2 border-primary/20">
-<img alt="Lecturer Profile Small" src="https://lh3.googleusercontent.com/aida-public/AB6AXuALWuF6B5oX9ygl8OyWrBzwQ5hcxBZfSmOfVC2mhbqNuZydzqe-vKZ9WSckygK9rL6x0ziev2B08UbefEelTkqB5VDxMRfESSF0_5ISWheGiSRb83eXQgtKBICXptyJbqXp5lRAz-_Cd8I9CM2YUYR0i4nSNxJvyCJB6r9TYRaxUm-JRxlHhDwYej-YeryjUpQb5GbK8kmSRFqOw94ONvM5Lnq9qSyQ5rI2QR7pTUtHLtvBRTaoGpWTW-9kQoxsue3uziHWW_37jXU"/>
+<img alt="Lecturer Profile Small" src="public/images/lec.jpeg"/>
 </div>
 </div>
 </div>
