--- a/frontend/lecturer-labslot-timetable.html
+++ b/frontend/lecturer-labslot-timetable.html
@@ -87,7 +87,7 @@
           <div class="h-9 w-9 rounded-full overflow-hidden border-2 border-primary/20">
             <img
               alt="Lecturer Profile Small"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuALWuF6B5oX9ygl8OyWrBzwQ5hcxBZfSmOfVC2mhbqNuZydzqe-vKZ9WSckygK9rL6x0ziev2B08UbefEelTkqB5VDxMRfESSF0_5ISWheGiSRb83eXQgtKBICXptyJbqXp5lRAz-_Cd8I9CM2YUYR0i4nSNxJvyCJB6r9TYRaxUm-JRxlHhDwYej-YeryjUpQb5GbK8kmSRFqOw94ONvM5Lnq9qSyQ5rI2QR7pTUtHLtvBRTaoGpWTW-9kQoxsue3uziHWW_37jXU"
+              src="public/images/lec.jpeg"
             />
           </div>
         </div>
@@ -104,7 +104,7 @@
           <span class="material-symbols-outlined text-slate-400 group-hover:text-primary">dashboard</span>
           Dashboard
         </a>
-        <a class="flex items-center gap-3 px-4 py-4 text-sm font-bold text-white bg-primary rounded-xl shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all" href="lecturer-evaluate-submission.html" id="scheduleExamBtn">
+        <a class="flex items-center gap-3 px-4 py-4 text-sm font-bold text-white bg-primary rounded-xl shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all" href="lecturer-schedule-exam.html" id="scheduleExamBtn">
           <span class="material-symbols-outlined">event_available</span>
           Schedule an Exam
         </a>
