--- a/frontend/lecturer-reports.html
+++ b/frontend/lecturer-reports.html
@@ -51,7 +51,7 @@
 </span>
 </button>
 <div class="h-9 w-9 rounded-full overflow-hidden border-2 border-primary/20">
-<img alt="Lecturer Profile" src="https://lh3.googleusercontent.com/aida-public/AB6AXuALWuF6B5oX9ygl8OyWrBzwQ5hcxBZfSmOfVC2mhbqNuZydzqe-vKZ9WSckygK9rL6x0ziev2B08UbefEelTkqB5VDxMRfESSF0_5ISWheGiSRb83eXQgtKBICXptyJbqXp5lRAz-_Cd8I9CM2YUYR0i4nSNxJvyCJB6r9TYRaxUm-JRxlHhDwYej-YeryjUpQb5GbK8kmSRFqOw94ONvM5Lnq9qSyQ5rI2QR7pTUtHLtvBRTaoGpWTW-9kQoxsue3uziHWW_37jXU"/>
+<img alt="Lecturer Profile" src="public/images/lec.jpeg"/>
 </div>
 </div>
 </div>
@@ -65,22 +65,22 @@
 <span class="material-symbols-outlined text-slate-400 group-hover:text-primary">dashboard</span>
                 Dashboard
             </a>
-<a class="flex items-center gap-3 px-4 py-4 text-sm font-bold text-white bg-primary rounded-xl shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all" href="#">
+<a class="flex items-center gap-3 px-4 py-4 text-sm font-bold text-white bg-primary rounded-xl shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all" href="lecturer-schedule-exam.html">
 <span class="material-symbols-outlined">event_available</span>
                 Schedule an Exam
             </a>
 <div class="pt-4 pb-2 px-4">
 <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Management</p>
 </div>
-<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="#">
+<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="lecturer-eva-submissions1.html">
 <span class="material-symbols-outlined text-slate-400 group-hover:text-primary">assignment</span>
                 Student Submissions
             </a>
-<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="#">
+<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="lecturer-labslot-timetable.html">
 <span class="material-symbols-outlined text-slate-400 group-hover:text-primary">calendar_view_week</span>
                 Lab Slot Timetable
             </a>
-<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="#">
+<a class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all group" href="lecturer-upload-materials.html">
 <span class="material-symbols-outlined text-slate-400 group-hover:text-primary">upload_file</span>
                 Upload Study Materials
             </a>
