--- a/frontend/practical-exam-submission.html
+++ b/frontend/practical-exam-submission.html
@@ -98,7 +98,7 @@
           <img
             alt="Student Profile"
             class="w-10 h-10 rounded-full border-2 border-white/50 object-cover"
-            src="https://lh3.googleusercontent.com/aida-public/AB6AXuAU5ODwspHJkNq6nsfIKtd48UXaE8dtugLhB4cdFkakzFEffbtipnZDq7vbAeofxGjgMI-g098uqHk1kf_LkT8RbTIk4RE49E8ilc6V47FZtlLlx4HCYfKXI8gxQ5er4Oder-5pYBBZ3noK2XhXVrXkl6UEsxqvtZ_PBYAc8aiu4P1xeDQkgcI5kb7gIpoH3OsiBuAfT9ci2Urhq8uannifvSUksGnzl2ctPz9yRqIpiaaf3G0PQgAymg9ap-AA5i0luJwYeya6GNI"
+            src="public/images/stu.jpg"
           />
           <div>
             <p class="text-xs text-indigo-100">Welcome back,</p>
