--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -40,8 +40,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center gap-2">
-                    <span class="material-symbols-outlined text-primary text-3xl">dentistry</span>
-                    <span class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">Denta<span class="text-primary">NET</span></span>
+                    <img src="purple-logo.svg" alt="DentaNet Logo" class="h-24 w-auto"/>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a class="text-sm font-medium hover:text-primary transition-colors" href="#">Home</a>
@@ -63,7 +62,7 @@
             <div class="glass-card rounded-2xl p-8 md:p-12 shadow-2xl">
                 <div class="text-center mb-8">
                     <div class="inline-flex items-center gap-2 mb-6">
-                        <img src="public/images/logo.jpg" alt="DentaNet Logo" class="h-24 w-auto rounded-lg shadow-md mx-auto"/>
+                        <img src="purple-logo.svg" alt="DentaNet Logo" class="h-24 w-auto rounded-lg shadow-md mx-auto"/>
                     </div>
                     <h1 class="text-3xl font-bold text-slate-900 dark:text-white mb-3">Reset Password</h1>
                     <p class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed">
@@ -289,7 +288,7 @@
                     return;
                 }
                 
-                alert('✅ Password reset successfully! You can now login with your new password.');
+                alert('Password reset successfully! You can now login with your new password.');
                 window.location.href = 'login.html';
                 
             } catch (error) {
