--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -87,8 +87,8 @@
 <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Student Dashboard</h1>
 <p class="text-gray-500 dark:text-gray-400">Welcome back, Senara! Here's what's happening today.</p>
 </div>
-<div class="flex items-center gap-4 bg-white dark:bg-card-dark p-2 pr-6 rounded-full shadow-sm border border-gray-100 dark:border-gray-800">
-<img alt="Student Profile" class="w-12 h-12 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAgEWyiHX3htSUw_sWb5Xnjz2_s7M3VHyGrfW-zCqrxgZT060BiYD_bjXMZUqSVssenIgekh2yjWgPIjo2AlmBolAPsQ3z_6UVRFM-mejHc0eEnqSRbaoJe78gFfQiz5dl-AO6q2DlBgzz2o0A7Uv45BsKdsLyC_7AjAuIVyeaUQtydpWk1h_IGwQZ7KlgayJ_xxTTsHPNHzoX9Hf13dExyLEzwdhx2C0JNERZIgxP0NGzRXkQDRSBeg5p4i9UyxtnD8BrD-C1VONo"/>
+<div class="mt-auto pt-6 border-t border-indigo-400/30 flex items-center gap-3">
+<img alt="Student Profile" class="w-10 h-10 rounded-full border-2 border-white/50" src="public/images/stu.jpg"/>
 <div>
 <p class="text-sm font-bold text-gray-900 dark:text-white">Senara Perera</p>
 <p class="text-[10px] text-primary font-bold uppercase tracking-wider">Dental Student</p>
