--- a/frontend/study-materials.html
+++ b/frontend/study-materials.html
@@ -103,7 +103,7 @@
               <span>Practical Exam Submission</span>
             </a>
 
-            <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="labslot-timetable.html">
+            <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="lab-slot-booking.html">
               <span class="material-symbols-outlined">event_seat</span>
               <span>Lab Slot Timetable</span>
             </a>
@@ -120,13 +120,9 @@
             </a>
           </nav>
 
-          <div class="mt-auto pt-6 border-t border-indigo-400/30 flex items-center gap-3">
-            <img
-              alt="Student Profile"
-              class="w-10 h-10 rounded-full border-2 border-white/50 object-cover"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuCz-RUUGf0g0CLprvORqdce-cgEMeLQV1nEl8XvG8dcncEkYVIHXv7meeOmGZIG_Zii8zwUCqbmbBYQfgCJFWBJlltXUtgnwpjQR-J92hnZZNIMkbIji78nRTtZGrN6cq9R52ukE9g3QxhT3klO624it3eL9JI989fvtruCRYLx7sDKqcjMzEWsuHPaUnD0HGXQCmwG7ehk-DlRUa5Nz7aUdVkk8oGoqn3UuEJVPepx7X11GKOOx-K8-xYOY49JdkpVFdiHiGH40Bc"
-            />
-            <div>
+           <div class="mt-auto pt-6 border-t border-indigo-400/30 flex items-center gap-3">
+             <img alt="Student Profile" class="w-10 h-10 rounded-full border-2 border-white/50" src="public/images/stu.jpg"/>
+           <div>
               <p class="text-xs text-indigo-100">Welcome back,</p>
               <p class="text-sm font-bold">Senara</p>
             </div>
@@ -194,7 +190,7 @@
               </div>
               <div
                 class="w-full h-full bg-cover bg-center"
-                style="background-image:url('https://lh3.googleusercontent.com/aida-public/AB6AXuACj8BNpK3djA31v3_l0fCVLkGJfG3a9Chpo1zFQn7pL010RYQv8VsidwOMXiS_XPKdyJ0F7yP41gzFiv7CN14NO_qVJ1keNqmigK6gIwB8gRn_l9hiKvh6zTzQg4dh7GLcLWcbxgs2z8RY-2WCBOKyD1WXDTh6DyUYxGIjsGXf2vWEi0LPZ34AqFQNAl5khInL7e9ZmlpCS25DS_OS5k5apn-jDfJcfbVEP7kgMVSwcwL0ye2uukMmKClOnvqjy-jHwZ6xulSpy2o');"
+                style="background-image:url('public/images/B3.jpg');"
               ></div>
               <span class="absolute bottom-3 right-3 bg-black/80 text-white text-[10px] font-bold px-2 py-1 rounded-full">12:45</span>
             </div>
@@ -244,7 +240,7 @@
               </div>
               <div
                 class="w-full h-full bg-cover bg-center"
-                style="background-image:url('https://lh3.googleusercontent.com/aida-public/AB6AXuA05rZMRQ_Uee6edM7GQW3pqsNNRyL7nCtSCKuDgdKptFLCVBsFkSHh8WYdDAuwkrYhaBeVpYWz8Kna0JteyEJDKbi-JIjedS9ZS4JWKDf9ORVuel07DS8nBHSUDQ5ZW3Xrm2djO-UxVHnILA93yW_8AbGEEbhtSBOyHtlls_XdxIFwJg0z_DQTj7CV-q7x2j7aDEBiLLua5XK-jSP8mm4DkYVsE5w-oIQ8SuJvaGooLNUe9HB_4bHOSi-T5ENe6GP03LfZmXQpMdU');"
+                style="background-image:url('public/images/B1.jpg');"
               ></div>
               <span class="absolute bottom-3 right-3 bg-black/80 text-white text-[10px] font-bold px-2 py-1 rounded-full">05:20</span>
             </div>
@@ -273,7 +269,7 @@
               </div>
               <div
                 class="w-full h-full bg-cover bg-center"
-                style="background-image:url('https://lh3.googleusercontent.com/aida-public/AB6AXuB5TeB7si9yg19GxoGQz_kzHQa6wEZDWPHcxl7tlQ_Njce2_CR5sxOgMmZStkr7npCC7JoHxfOKD7s21JJg5ZFydpQRWhvKNW-PUjWhaqHVdk4L3VK25GGAUWYqTZTrhyxUYYGut0h1_3At9bw-PGY8-11bw-Br9RQt21So1Mp8Fx7TpDHeQEPfeXis5J1VISCmbuUP4QloU280UTQafyzhA1AefaUW85jFKXd_6wS8N4yjhGXulAEZ1wcmUCfEu-sFKAL9mArn2Ww');"
+                style="background-image:url('public/images/B4.jpeg');"
               ></div>
               <span class="absolute bottom-3 right-3 bg-black/80 text-white text-[10px] font-bold px-2 py-1 rounded-full">18:10</span>
             </div>
