--- a/frontend/Admin-labslot-timetable.html
+++ b/frontend/Admin-labslot-timetable.html
@@ -78,105 +78,80 @@
 
 <body class="bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200 transition-colors duration-200 min-h-screen flex flex-col">
 
-  <!-- TOP NAV (match Admin Settings page) -->
-  <nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
-    <div class="flex items-center space-x-2">
-      <span class="material-symbols-outlined text-3xl">medical_services</span>
-      <span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
+
+<nav class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
+    <div class="flex justify-between h-16 items-center">
+      <div class="flex items-center gap-2">
+        <div class="flex items-center space-x-2 h-full">
+          <img 
+            src="blue-logo.svg" 
+            class="h-32 w-auto object-contain"/>
+        </div>
+      </div>
+      <div class="hidden md:flex items-center space-x-8">
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="admin-dashboard.html">Home</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">About</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">Contact</a>
+        <button id="logoutBtn" class="bg-primary hover:bg-accent text-white px-5 py-2 rounded-lg text-sm font-semibold transition-all shadow-md shadow-indigo-200 dark:shadow-none">Log Out</button>
+      <!-- Log Out button already has id. Ensure script is present and correct. -->
+      </div>
     </div>
+  </div>
+</nav>
 
-    <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
-      <a class="hover:text-blue-200 transition-colors" href="admin-dashboard.html">Home</a>
-      <a class="hover:text-blue-200 transition-colors" href="master-schedule.html">Master Schedule</a>
-      <a class="hover:text-blue-200 transition-colors" href="system-logs.html">System Logs</a>
-      <a class="hover:text-blue-200 transition-colors" href="admin-api-monitor.html">API Monitor</a>
-      <a class="hover:text-blue-200 transition-colors" href="admin-manage-users.html">User Access</a>
-      <!-- Current page -->
-      <a class="text-blue-200 underline underline-offset-8 decoration-2" href="#">Exam Monitor</a>
-
-      <button id="logoutBtn" class="bg-white text-primary px-5 py-1.5 rounded-md font-bold hover:bg-slate-100 transition-all shadow-sm">
-        Log Out
-      </button>
-    </div>
-  </nav>
-
-  <div class="flex flex-1 overflow-hidden">
+  <div class="flex flex-1 min-h-0">
 
     <!-- SIDEBAR (match Admin Settings page) -->
-    <aside class="w-72 bg-bg-sidebar p-6 flex flex-col space-y-8 text-slate-300 hidden lg:flex border-r border-slate-800">
-      <div class="pt-4">
-        <h2 class="text-xs font-bold opacity-50 uppercase tracking-[0.2em]">Management</h2>
-        <p class="text-xs font-medium text-blue-400 mt-1">Lab Admin Suite</p>
-      </div>
-
-      <nav class="flex-1 space-y-2">
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-dashboard.html" id="dashboardBtn">
-          <span class="material-symbols-outlined text-xl">dashboard</span>
-          <span class="font-medium">Dashboard</span>
-        </a>
-
-        <!-- Added: Lab Slot Timetable (your requested item) -->
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all sidebar-labslot" href="Admin-labslot-timetable.html" id="labSlotBtn">
-          <span class="material-symbols-outlined text-xl">calendar_view_week</span>
-          <span class="font-medium">Lab Slot Timetable</span>
-        </a>
-
-        <!-- ACTIVE -->
-        <a class="sidebar-active flex items-center space-x-3 px-4 py-3 rounded-xl shadow-md" href="#" id="examMonitorBtn">
-          <span class="material-symbols-outlined text-xl">visibility</span>
-          <span class="font-semibold">Exam Slot Monitor</span>
-        </a>
-
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="system-logs.html" id="logsBtn">
-          <span class="material-symbols-outlined text-xl">article</span>
-          <span class="font-medium">System Logs</span>
-        </a>
-
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-api-monitor.html" id="apiBtn">
-          <span class="material-symbols-outlined text-xl">monitoring</span>
-          <span class="font-medium">API Monitor</span>
-        </a>
-
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-manage-users.html" id="usersBtn">
-          <span class="material-symbols-outlined text-xl">manage_accounts</span>
-          <span class="font-medium">User Access</span>
-        </a>
-
-        <a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-settings.html" id="settingsBtn">
-          <span class="material-symbols-outlined text-xl">settings</span>
-          <span class="font-medium">System Settings</span>
-        </a>
-      </nav>
-
-      <div class="bg-slate-800/50 rounded-xl p-4 border border-slate-700/50">
-        <h3 class="text-[10px] font-bold uppercase mb-3 opacity-60 flex items-center gap-2">
-          <span class="w-2 h-2 rounded-full bg-green-500"></span> System Status
-        </h3>
-        <div class="space-y-3">
-          <div class="flex justify-between text-[11px]">
-            <span class="opacity-60">Service Health</span>
-            <span class="font-bold text-blue-400">OK</span>
-          </div>
-          <div class="w-full bg-slate-700 h-1 rounded-full overflow-hidden">
-            <div class="bg-blue-500 h-full w-[90%]"></div>
-          </div>
+    <aside class="w-72 bg-[#172554] dark:bg-dark-card p-6 rounded-2xl text-white flex flex-col justify-between shadow-xl border dark:border-dark-border">
+      <div>
+        <div class="mb-8">
+          <h2 class="text-lg font-bold">LMS</h2>
+          <p class="text-xs opacity-70">University of Peradeniya</p>
         </div>
+        <nav class="space-y-2">
+          <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-dashboard.html">
+            <span class="material-symbols-outlined">dashboard</span>
+            <span>Dashboard</span>
+          </a>
+          <a class="sidebar-active flex items-center gap-3 p-3 rounded-lg font-semibold shadow-sm" href="Admin-labslot-timetable.html">
+            <span class="material-symbols-outlined">event_note</span>
+            <span>Lab Timetable</span>
+          </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-manage-users.html">
+        <span class="material-symbols-outlined">group</span>
+        <span>Manage Users</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="master-schedule.html">
+        <span class="material-symbols-outlined">list_alt</span>
+        <span>Calendar</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-api-monitor.html">
+        <span class="material-symbols-outlined">monitoring</span>
+        <span>API Monitor</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-settings.html">
+        <span class="material-symbols-outlined">settings</span>
+        <span>Settings</span>
+    </a>
+        </nav>
+      </div>
+      <div class="pt-6 border-t border-white/10">
+        <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+          <span class="material-symbols-outlined">help</span>
+          <span>Help and Support</span>
+        </a>
       </div>
     </aside>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 p-6 md:p-10 overflow-y-auto">
+    <main class="flex-1 min-w-0 p-6 md:p-10 overflow-y-auto flex flex-col justify-start" style="margin-top:0!important;">
       <div class="max-w-6xl mx-auto">
 
         <div class="flex flex-col md:flex-row justify-between items-start mb-8 gap-4">
           <div>
             <h1 class="text-3xl font-extrabold text-slate-900 dark:text-white mb-1">Exam Slot Monitoring</h1>
             <p class="text-slate-500 dark:text-slate-400 font-medium">Real-time capacity tracking and machine status for practical exams.</p>
-          </div>
-
-          <div class="bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl px-4 py-2 flex items-center gap-2 shadow-sm">
-            <span class="material-symbols-outlined text-primary">admin_panel_settings</span>
-            <span class="text-xs font-bold uppercase tracking-widest text-slate-700 dark:text-slate-200">Lecturer View Only</span>
           </div>
         </div>
 
@@ -502,4 +477,13 @@
   </button>
 
 </body>
+<script>
+  // Make Log Out button functional
+  const logoutBtn = document.getElementById('logoutBtn');
+  if (logoutBtn) {
+    logoutBtn.addEventListener('click', function() {
+      window.location.href = 'login.html';
+    });
+  }
+</script>
 </html>
