--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -41,47 +41,70 @@
     </style>
 </head>
 <body class="bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200 transition-colors duration-200">
-<nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
-<div class="flex items-center space-x-2">
-<img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
-</div>
-<div class="hidden md:flex items-center space-x-8 text-sm font-medium">
-<a class="hover:text-blue-200 transition-colors" href="#" id="homeBtn">Home</a>
-<a class="hover:text-blue-200 transition-colors" href="#" id="logsBtn">System Logs</a>
-<a class="hover:text-blue-200 transition-colors" href="#" id="settingsBtn">Settings</a>
-<button id="logoutBtn" class="bg-white text-primary px-5 py-1.5 rounded-md font-bold hover:bg-slate-100 transition-all shadow-sm">Log Out</button>
-</div>
+<nav class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
+    <div class="flex justify-between h-16 items-center">
+      <div class="flex items-center gap-2">
+                <div class="flex items-center space-x-2 h-full">
+                    <img 
+                        src="blue-logo.svg" 
+                        alt="DentaNet Logo" 
+                        class="h-32 w-auto object-contain"/>
+                </div>
+      </div>
+      <div class="hidden md:flex items-center space-x-8">
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">Home</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">About</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">Contact</a>
+        <button id="logoutBtn" class="bg-primary hover:bg-accent text-white px-5 py-2 rounded-lg text-sm font-semibold transition-all shadow-md shadow-indigo-200 dark:shadow-none">Log Out</button>
+    </body>
+    <script>
+        // Make Log Out button functional
+        const logoutBtn = document.getElementById('logoutBtn');
+        if (logoutBtn) {
+            logoutBtn.addEventListener('click', function() {
+                window.location.href = 'login.html';
+            });
+        }
+    </script>
+      </div>
+    </div>
+  </div>
 </nav>
 <div class="flex min-h-screen">
 <aside class="w-72 bg-bg-sidebar p-6 flex flex-col space-y-8 text-slate-300 hidden lg:flex border-r border-slate-800">
-<div class="pt-4">
-<h2 class="text-xs font-bold opacity-50 uppercase tracking-[0.2em]">Management</h2>
-<p class="text-xs font-medium text-blue-400 mt-1">Admin</p>
+<div class="mb-8">
+    <h2 class="text-lg font-bold">LMS</h2>
+    <p class="text-xs opacity-70">University of Peradeniya</p>
 </div>
-<nav class="flex-1 space-y-2">
-<a class="sidebar-active flex items-center space-x-3 px-4 py-3 rounded-xl shadow-md" href="#" id="dashboardBtn">
-<span class="material-symbols-outlined text-xl">dashboard</span>
-<span class="font-semibold">Dashboard</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-manage-users.html" id="usersBtn">
-<span class="material-symbols-outlined text-xl">manage_accounts</span>
-<span class="font-medium">Manage Users</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-api-monitor.html" id="apiBtn">
-<span class="material-symbols-outlined text-xl">monitoring</span>
-<span class="font-medium">API Monitor</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="#" id="scheduleBtn">
-<span class="material-symbols-outlined text-xl">calendar_month</span>
-<span class="font-medium">Master Schedule</span>
-</a>
-
+<nav class="space-y-2">
+    <a class="sidebar-active flex items-center gap-3 p-3 rounded-lg font-semibold shadow-sm" href="#">
+        <span class="material-symbols-outlined">dashboard</span>
+        <span>Dashboard</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-manage-users.html">
+        <span class="material-symbols-outlined">group</span>
+        <span>Manage Users</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="master-schedule.html">
+        <span class="material-symbols-outlined">event_note</span>
+        <span>Calendar</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-api-monitor.html">
+        <span class="material-symbols-outlined">monitoring</span>
+        <span>API Monitor</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-settings.html">
+        <span class="material-symbols-outlined">settings</span>
+        <span>Settings</span>
+    </a>
 </nav>
-<div class="bg-slate-800/50 rounded-xl p-4 border border-slate-700/50">
-<h3 class="text-[10px] font-bold uppercase mb-3 opacity-60 flex items-center gap-2">
-<span class="w-2 h-2 rounded-full bg-green-500"></span> System Status
-            </h3>
-
+<div class="pt-6 border-t border-white/10">
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+        <span class="material-symbols-outlined">help</span>
+        <span>Help and Support</span>
+    </a>
+</div>
 </aside>
 <main class="flex-1 p-6 md:p-10">
 <div class="flex flex-col md:flex-row justify-between items-start mb-10 gap-4">
@@ -91,7 +114,7 @@
 </div>
 <div class="flex items-center gap-4 bg-white dark:bg-slate-800 p-2 pr-6 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-700">
 <div class="relative">
-<img alt="Admin Profile" class="w-12 h-12 rounded-xl border-2 border-primary object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCxeXiMGPrpKeXSnpcGwKooW7h23CnaqanyKXKt-0sJgIr2s30DSOxJFGwkEDVB9ECaEDLjCM84YUYjNkUoes7ZlQtkmXSxwm1q3svcy5LIoNCOXXgpi9EuPSDao7-i-m4DYruK-sN0D4CixZBNnMDI8Dqpv8vNvhXu_snrfO9BREHOW9p6J60WT0-e_Str14Zk1qH0NLYnA_gkfirWA8QXyjtuhNYEgp5_LLShBrnetxZywpEs66dm99IxrJ4ydbfp9oV2Se0jBHA"/>
+<img alt="Admin Profile" class="w-12 h-12 rounded-xl border-2 border-primary object-cover" src="public/images/admin.jpg"/>
 <div class="absolute -bottom-1 -right-1 w-4 h-4 bg-green-500 border-2 border-white dark:border-slate-800 rounded-full"></div>
 </div>
 <div>
@@ -110,12 +133,23 @@
                             <span class="bg-primary text-white text-[10px] px-2 py-0.5 rounded-full">3</span>
 </button>
 <button class="tab-inactive px-1 pb-4 text-sm font-semibold flex items-center gap-2 relative group">
-                            Practical Exams
-                            <span class="bg-slate-200 dark:bg-slate-700 text-slate-500 text-[10px] px-2 py-0.5 rounded-full">Auto</span>
-<div class="absolute bottom-full mb-2 hidden group-hover:block bg-slate-800 text-white text-[10px] p-2 rounded w-48 text-center left-1/2 -translate-x-1/2 shadow-xl">
-                                Slots are automatically allocated based on student availability.
-                            </div>
-</button>
+                                                        Practical Exams
+                                                        <span class="bg-slate-200 dark:bg-slate-700 text-slate-500 text-[10px] px-2 py-0.5 rounded-full">Auto</span>
+                                                        <div class="absolute bottom-full mb-2 hidden group-hover:block bg-slate-800 text-white text-[10px] p-2 rounded w-48 text-center left-1/2 -translate-x-1/2 shadow-xl">
+                                                                Slots are automatically allocated based on student availability.
+                                                        </div>
+                                                </button>
+<script>
+    // Add click handler for Practical Exams tab
+    document.addEventListener('DOMContentLoaded', function() {
+        var practicalTab = document.querySelector('.tab-inactive.flex.items-center.gap-2.relative.group');
+        if (practicalTab && practicalTab.textContent.includes('Practical Exams')) {
+            practicalTab.onclick = function() {
+                window.location.href = 'Admin-labslot-timetable.html';
+            };
+        }
+    });
+</script>
 </div>
 </div>
 <div class="flex items-center gap-2 mb-4">
