--- a/frontend/grades-feedback.html
+++ b/frontend/grades-feedback.html
@@ -71,9 +71,9 @@
   <span class="material-symbols-outlined">upload_file</span>
   <span>Practical Exam Submission</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="labslot-timetable.html">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="lab-slot-booking.html">
   <span class="material-symbols-outlined">event_seat</span>
-  <span>Lab Slot Timetable</span>
+  <span>Lab Slot Booking</span>
 </a>
 <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="study-materials.html">
   <span class="material-symbols-outlined">menu_book</span>
@@ -85,10 +85,10 @@
 </a>
 </nav>
 <div class="mt-auto pt-6 border-t border-indigo-400/30 flex items-center gap-3">
-<img alt="Student Profile" class="w-10 h-10 rounded-full border-2 border-white/50" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAU5ODwspHJkNq6nsfIKtd48UXaE8dtugLhB4cdFkakzFEffbtipnZDq7vbAeofxGjgMI-g098uqHk1kf_LkT8RbTIk4RE49E8ilc6V47FZtlLlx4HCYfKXI8gxQ5er4Oder-5pYBBZ3noK2XhXVrXkl6UEsxqvtZ_PBYAc8aiu4P1xeDQkgcI5kb7gIpoH3OsiBuAfT9ci2Urhq8uannifvSUksGnzl2ctPz9yRqIpiaaf3G0PQgAymg9ap-AA5i0luJwYeya6GNI"/>
+<img alt="Student Profile" class="w-10 h-10 rounded-full border-2 border-white/50" src="public/images/stu.jpg"/>
 <div>
 <p class="text-xs text-indigo-100">Welcome back,</p>
-<p class="text-sm font-bold">Reshma</p>
+<p class="text-sm font-bold">Senara</p>
 </div>
 </div>
 </div>
@@ -199,7 +199,7 @@
     If you did not pass or wish to improve your score, you can retake the <span class="font-bold text-white">'Cavity Preparation'</span> practical. Retakes are available for eligible students only.
   </p>
   <div class="space-y-4">
-    <a href="labslot-timetable.html" class="block w-full py-4 bg-white text-indigo-600 text-sm font-bold rounded-xl hover:bg-indigo-50 transition-colors shadow-lg text-center">
+    <a href="lab-slot-booking.html" class="block w-full py-4 bg-white text-indigo-600 text-sm font-bold rounded-xl hover:bg-indigo-50 transition-colors shadow-lg text-center">
       Request Retake
     </a>
     <p class="text-center text-[11px] text-indigo-200 uppercase font-bold tracking-widest">Pass the practical test to sit for the end exam paper</p>
