--- a/frontend/master-schedule.html
+++ b/frontend/master-schedule.html
@@ -42,52 +42,72 @@
     </style>
 </head>
 <body class="bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200 transition-colors duration-200">
-<nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
-<div class="flex items-center space-x-2">
-<span class="material-symbols-outlined text-3xl">medical_services</span>
-<span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
-</div>
-<div class="hidden md:flex items-center space-x-8 text-sm font-medium">
-<a class="hover:text-blue-200 transition-colors" href="admin-dashboard.html" id="dashboardBtnTop">Home</a>
-<a class="hover:text-blue-200 transition-colors" href="system-logs.html" id="logsBtnTop">System Logs</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-settings.html" id="settingsBtnTop">Settings</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-api-monitor.html" id="apiBtnTop">API Monitor</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-manage-users.html" id="usersBtnTop">User Access</a>
-<a class="text-blue-200 border-b-2 border-blue-200 pb-0.5 transition-colors" href="master-schedule.html" id="scheduleBtnTop">Master Schedule</a>
-<button id="logoutBtn" class="bg-white text-primary px-5 py-1.5 rounded-md font-bold hover:bg-slate-100 transition-all shadow-sm">Log Out</button>
-</div>
+
+<nav class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between h-16 items-center">
+      <div class="flex items-center gap-2">
+                <div class="flex items-center space-x-2 h-full">
+                    <img 
+                        src="blue-logo.svg" 
+                        alt="DentaNet Logo" 
+                        class="h-32 w-auto object-contain"/>
+                </div>
+      </div>
+      <div class="hidden md:flex items-center space-x-8">
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">Home</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">About</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#">Contact</a>
+        <button id="logoutBtn" class="bg-primary hover:bg-accent text-white px-5 py-2 rounded-lg text-sm font-semibold transition-all shadow-md shadow-indigo-200 dark:shadow-none">Log Out</button>
+    </body>
+    <script>
+        // Make Log Out button functional
+        const logoutBtn = document.getElementById('logoutBtn');
+        if (logoutBtn) {
+            logoutBtn.addEventListener('click', function() {
+                window.location.href = 'login.html';
+            });
+        }
+    </script>
+      </div>
+    </div>
+  </div>
 </nav>
 <div class="flex min-h-screen">
 <aside class="w-72 bg-bg-sidebar p-6 flex flex-col space-y-8 text-slate-300 hidden lg:flex border-r border-slate-800">
-<div class="pt-4">
-<h2 class="text-xs font-bold opacity-50 uppercase tracking-[0.2em]">Management</h2>
-<p class="text-xs font-medium text-blue-400 mt-1">Lab Admin Suite</p>
+<div class="mb-8">
+    <h2 class="text-lg font-bold">LMS</h2>
+    <p class="text-xs opacity-70">University of Peradeniya</p>
 </div>
-<nav class="flex-1 space-y-2">
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-dashboard.html" id="dashboardBtn">
-<span class="material-symbols-outlined text-xl">dashboard</span>
-<span class="font-medium">Dashboard</span>
-</a>
-<a class="sidebar-active flex items-center space-x-3 px-4 py-3 rounded-xl shadow-md" href="master-schedule.html" id="scheduleBtn">
-<span class="material-symbols-outlined text-xl">calendar_month</span>
-<span class="font-semibold">Master Schedule</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-api-monitor.html" id="apiBtn">
-<span class="material-symbols-outlined text-xl">monitoring</span>
-<span class="font-medium">API Monitor</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-manage-users.html" id="usersBtn">
-<span class="material-symbols-outlined text-xl">manage_accounts</span>
-<span class="font-medium">User Access</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="system-logs.html" id="logsBtn">
-<span class="material-symbols-outlined text-xl">article</span>
-<span class="font-medium">System Logs</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-settings.html" id="settingsBtn">
-<span class="material-symbols-outlined text-xl">settings</span>
-<span class="font-medium">System Settings</span>
-</a>
+<nav class="space-y-2">
+    <a class="flex items-center gap-3 p-3 rounded-lg font-semibold shadow-sm" href="admin-dashboard.html">
+        <span class="material-symbols-outlined">dashboard</span>
+        <span>Dashboard</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-manage-users.html">
+        <span class="material-symbols-outlined">group</span>
+        <span>Manage Users</span>
+    </a>
+    <a class="sidebar-active flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="master-schedule.html">
+        <span class="material-symbols-outlined">event_note</span>
+        <span>Calendar</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-api-monitor.html">
+        <span class="material-symbols-outlined">monitoring</span>
+        <span>API Monitor</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-settings.html">
+        <span class="material-symbols-outlined">settings</span>
+        <span>Settings</span>
+    </a>
+</nav>
+<div class="pt-6 border-t border-white/10">
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+        <span class="material-symbols-outlined">help</span>
+        <span>Help and Support</span>
+    </a>
+</div>
+</aside>
 </nav>
 <script>
 // Auth check
@@ -123,20 +143,7 @@ document.getElementById('settingsBtn').onclick = function(e) {
 };
 </script>
 </nav>
-<div class="bg-slate-800/50 rounded-xl p-4 border border-slate-700/50">
-<h3 class="text-[10px] font-bold uppercase mb-3 opacity-60 flex items-center gap-2">
-<span class="w-2 h-2 rounded-full bg-green-500"></span> System Status
-                </h3>
-<div class="space-y-3">
-<div class="flex justify-between text-[11px]">
-<span class="opacity-60">Server Load</span>
-<span class="font-bold text-blue-400">12%</span>
-</div>
-<div class="w-full bg-slate-700 h-1 rounded-full overflow-hidden">
-<div class="bg-blue-500 h-full w-[12%]"></div>
-</div>
-</div>
-</div>
+
 </aside>
 <main class="flex-1 p-6 md:p-10">
 <div class="flex flex-col md:flex-row justify-between items-start mb-8 gap-4">
@@ -146,22 +153,20 @@ document.getElementById('settingsBtn').onclick = function(e) {
 </div>
 <div class="flex items-center gap-4 bg-white dark:bg-slate-800 p-2 pr-6 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-700">
 <div class="relative">
-<img alt="Admin Profile" class="w-12 h-12 rounded-xl border-2 border-primary object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCxeXiMGPrpKeXSnpcGwKooW7h23CnaqanyKXKt-0sJgIr2s30DSOxJFGwkEDVB9ECaEDLjCM84YUYjNkUoes7ZlQtkmXSxwm1q3svcy5LIoNCOXXgpi9EuPSDao7-i-m4DYruK-sN0D4CixZBNnMDI8Dqpv8vNvhXu_snrfO9BREHOW9p6J60WT0-e_Str14Zk1qH0NLYnA_gkfirWA8QXyjtuhNYEgp5_LLShBrnetxZywpEs66dm99IxrJ4ydbfp9oV2Se0jBHA"/>
+<img alt="Admin Profile" class="w-12 h-12 rounded-xl border-2 border-primary object-cover" src="public/images/admin.jpg"/>
 <div class="absolute -bottom-1 -right-1 w-4 h-4 bg-green-500 border-2 border-white dark:border-slate-800 rounded-full"></div>
 </div>
 <div>
 <p class="text-xs font-bold text-slate-800 dark:text-white leading-none">Yonali Perera</p>
-<p class="text-[10px] text-slate-500 font-bold uppercase mt-1">Super Admin</p>
+<p class="text-[10px] text-slate-500 font-bold uppercase mt-1">Admin</p>
 </div>
 </div>
 </div>
 <div class="bg-white dark:bg-slate-800 p-4 rounded-2xl border border-slate-200 dark:border-slate-700 mb-8 flex flex-wrap gap-4 items-end shadow-sm">
 <div class="flex-1 min-w-[200px]">
 <label class="block text-[10px] font-bold uppercase text-slate-400 mb-1.5 ml-1">Current Month</label>
-<div class="relative flex items-center justify-between bg-slate-50 dark:bg-slate-900 border border-slate-200 dark:border-slate-700 rounded-xl px-4 py-2">
-<span class="material-symbols-outlined text-slate-400 cursor-pointer hover:text-primary">chevron_left</span>
-<span class="text-sm font-semibold">December 2025</span>
-<span class="material-symbols-outlined text-slate-400 cursor-pointer hover:text-primary">chevron_right</span>
+<div class="relative">
+    <input type="month" id="monthPicker" name="monthPicker" value="2025-12" class="w-full bg-slate-50 dark:bg-slate-900 border border-slate-200 dark:border-slate-700 rounded-xl px-4 py-2 text-sm font-semibold" />
 </div>
 </div>
 <div class="flex-1 min-w-[180px]">
