--- a/frontend/system-logs.html
+++ b/frontend/system-logs.html
@@ -6,30 +6,30 @@
 <title>System Logs - DentaNet Admin</title>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries"></script>
-<script>
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        primary: "#1E3A8A", // Deep Dark Blue
-                        secondary: "#0F172A", // Navy
-                        accent: "#3B82F6", // Bright Blue
-                        "bg-main": "#F8FAFC",
-                        "bg-sidebar": "#0F172A"
-                    },
-                    fontFamily: {
-                        sans: ["Inter", "sans-serif"],
-                    },
-                    borderRadius: {
-                        DEFAULT: "0.5rem",
-                        'xl': '1rem'
-                    },
-                },
-            },
-        };
-    </script>
+<a class="sidebar-active flex items-center gap-3 p-3 rounded-lg font-semibold shadow-sm" href="#">
+        <span class="material-symbols-outlined">dashboard</span>
+        <span>Dashboard</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-manage-users.html">
+        <span class="material-symbols-outlined">group</span>
+        <span>Manage Users</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+        <span class="material-symbols-outlined">event_note</span>
+        <span>Lab Timetable</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-api-monitor.html">
+        <span class="material-symbols-outlined">monitoring</span>
+        <span>API Monitor</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+        <span class="material-symbols-outlined">list_alt</span>
+        <span>User Logs</span>
+    </a>
+    <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+        <span class="material-symbols-outlined">settings</span>
+        <span>Settings</span>
+    </a>
 <style type="text/tailwindcss">
         @layer base {
             body { @apply font-sans bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200; }
@@ -39,64 +39,68 @@
     </style>
 </head>
 <body class="transition-colors duration-200">
-<nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
-<div class="flex items-center space-x-2">
-<span class="material-symbols-outlined text-3xl">medical_services</span>
-<span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
-</div>
-<div class="hidden md:flex items-center space-x-8 text-sm font-medium">
-<a class="hover:text-blue-200 transition-colors" href="admin-settings.html">Settings</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-dashboard.html">Home</a>
-<a class="hover:text-blue-200 transition-colors" href="master-schedule.html">Master Schedule</a>
-<a class="text-blue-200 transition-colors border-b-2 border-blue-200 pb-0.5" href="system-logs.html">System Logs</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-api-monitor.html">API Monitor</a>
-<a class="hover:text-blue-200 transition-colors" href="admin-manage-users.html">User Access</a>
-<button id="logoutBtn" class="bg-white text-primary px-5 py-1.5 rounded-md font-bold hover:bg-slate-100 transition-all shadow-sm">Log Out</button>
-</div>
+<nav class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-0 sm:px-0 lg:px-0">
+        <div class="flex justify-between h-16 items-center">
+            <div class="flex items-center gap-2">
+                <div class="flex items-center space-x-2 h-full">
+                    <img 
+                        src="blue-logo.svg" 
+                        alt="DentaNet Logo" 
+                        class="h-32 w-auto object-contain"/>
+                </div>
+            </div>
+            <div class="hidden md:flex items-center space-x-8">
+                <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="admin-dashboard.html">Home</a>
+                <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="master-schedule.html">Master Schedule</a>
+                <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="system-logs.html">System Logs</a>
+                <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="admin-api-monitor.html">API Monitor</a>
+                <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="admin-manage-users.html">User Access</a>
+                <button id="logoutBtn" class="bg-primary hover:bg-accent text-white px-5 py-2 rounded-lg text-sm font-semibold transition-all shadow-md shadow-indigo-200 dark:shadow-none">Log Out</button>
+            </div>
+        </div>
+    </div>
 </nav>
 <div class="flex min-h-screen">
-<aside class="w-72 bg-bg-sidebar p-6 flex flex-col space-y-8 text-slate-400 hidden lg:flex border-r border-slate-800">
-<div class="pt-4">
-<h2 class="text-xs font-bold opacity-50 uppercase tracking-[0.2em]">Management</h2>
-<p class="text-xs font-medium text-blue-400 mt-1">Lab Admin Suite</p>
-</div>
-<nav class="flex-1 space-y-2">
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-settings.html" id="settingsBtn">
-<span class="material-symbols-outlined text-xl">settings</span>
-<span class="font-medium">System Settings</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-dashboard.html" id="dashboardBtn">
-<span class="material-symbols-outlined text-xl">dashboard</span>
-<span class="font-medium">Dashboard</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="master-schedule.html" id="scheduleBtn">
-<span class="material-symbols-outlined text-xl">calendar_month</span>
-<span class="font-medium">Master Schedule</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-api-monitor.html" id="apiBtn">
-<span class="material-symbols-outlined text-xl">monitoring</span>
-<span class="font-medium">API Monitor</span>
-</a>
-<a class="sidebar-active flex items-center space-x-3 px-4 py-3 rounded-xl shadow-md" href="system-logs.html" id="logsBtn">
-<span class="material-symbols-outlined text-xl">article</span>
-<span class="font-semibold text-white">System Logs</span>
-</a>
-<a class="flex items-center space-x-3 px-4 py-3 rounded-xl hover:bg-slate-800 transition-all" href="admin-manage-users.html" id="usersBtn">
-<span class="material-symbols-outlined text-xl">manage_accounts</span>
-<span class="font-medium">User Access</span>
-</a>
-</nav>
-<div class="bg-slate-800/50 rounded-xl p-4 border border-slate-700/50">
-<h3 class="text-[10px] font-bold uppercase mb-3 opacity-60 flex items-center gap-2">
-<span class="w-2 h-2 rounded-full bg-green-500"></span> System Live
-                </h3>
-<div class="space-y-1">
-<p class="text-[10px] opacity-60">Storage Usage</p>
-<div class="w-full bg-slate-700 h-1.5 rounded-full overflow-hidden">
-<div class="bg-blue-500 h-full w-[45%]"></div>
-</div>
-</div>
-</div>
+<aside class="w-72 bg-[#172554] dark:bg-dark-card p-6 rounded-2xl text-white flex flex-col justify-between shadow-xl border dark:border-dark-border">
+    <div>
+        <div class="mb-8">
+            <h2 class="text-lg font-bold">LMS</h2>
+            <p class="text-xs opacity-70">University of Peradeniya</p>
+        </div>
+        <nav class="space-y-2">
+            <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-dashboard.html">
+                <span class="material-symbols-outlined">dashboard</span>
+                <span>Dashboard</span>
+            </a>
+            <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-manage-users.html">
+                <span class="material-symbols-outlined">group</span>
+                <span>Manage Users</span>
+            </a>
+            <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-labslot-timetable.html">
+                <span class="material-symbols-outlined">event_note</span>
+                <span>Lab Timetable</span>
+            </a>
+            <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="admin-api-monitor.html">
+                <span class="material-symbols-outlined">monitoring</span>
+                <span>API Monitor</span>
+            </a>
+            <a class="sidebar-active flex items-center gap-3 p-3 rounded-lg font-semibold shadow-sm" href="system-logs.html">
+                <span class="material-symbols-outlined">list_alt</span>
+                <span>User Logs</span>
+            </a>
+            <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+                <span class="material-symbols-outlined">settings</span>
+                <span>Settings</span>
+            </a>
+        </nav>
+    </div>
+    <div class="pt-6 border-t border-white/10">
+        <a class="flex items-center gap-3 p-3 rounded-lg hover:bg-white/10 transition-colors" href="#">
+            <span class="material-symbols-outlined">help</span>
+            <span>Help and Support</span>
+        </a>
+    </div>
 </aside>
 <main class="flex-1 p-6 lg:p-10">
 <header class="flex flex-col md:flex-row justify-between items-start mb-8 gap-4">
@@ -251,17 +255,24 @@
 </section>
 </main>
 </div>
-<footer class="bg-slate-900 text-slate-400 py-12 border-t border-slate-800">
-<div class="max-w-7xl mx-auto px-6">
-<div class="flex flex-wrap justify-center gap-x-12 gap-y-6 text-[11px] font-bold uppercase tracking-widest text-slate-500 mb-8">
-<a class="hover:text-blue-400 transition-all" href="#">Support Center</a>
-<a class="hover:text-blue-400 transition-all" href="#">System Status</a>
-<a class="hover:text-blue-400 transition-all" href="#">Security Policy</a>
-</div>
-<div class="text-center text-[10px] text-slate-600 border-t border-slate-800 pt-8">
-<p>© 2025 DentaNet Admin Hub. Clinical Excellence Through Data Management.</p>
-</div>
-</div>
+<footer class="bg-slate-900 text-slate-400 pt-16 pb-8 border-t border-slate-800">
+    <div class="max-w-7xl mx-auto px-6">
+        <div class="flex flex-wrap justify-center gap-x-12 gap-y-6 text-[11px] font-bold uppercase tracking-widest text-slate-500 mb-12">
+            <a class="hover:text-blue-400 transition-all" href="#">Support Center</a>
+            <a class="hover:text-blue-400 transition-all" href="#">System Status</a>
+            <a class="hover:text-blue-400 transition-all" href="#">API Documentation</a>
+            <a class="hover:text-blue-400 transition-all" href="#">Privacy Hub</a>
+            <a class="hover:text-blue-400 transition-all" href="#">Admin Policy</a>
+        </div>
+        <div class="flex justify-center space-x-8 mb-8 text-slate-600">
+            <a class="hover:text-blue-400 transition-colors" href="#"><span class="material-symbols-outlined">shield</span></a>
+            <a class="hover:text-blue-400 transition-colors" href="#"><span class="material-symbols-outlined">data_object</span></a>
+            <a class="hover:text-blue-400 transition-colors" href="#"><span class="material-symbols-outlined">settings_suggest</span></a>
+        </div>
+        <div class="text-center text-[10px] text-slate-600 border-t border-slate-800 pt-8">
+            <p>© 2026 DentaNet Admin Hub. Clinical Excellence Through Data Management.</p>
+        </div>
+    </div>
 </footer>
 <button class="fixed bottom-8 right-8 w-14 h-14 bg-primary text-white rounded-2xl shadow-2xl z-50 hover:bg-blue-800 hover:-translate-y-1 transition-all flex items-center justify-center border border-white/10" onclick="document.documentElement.classList.toggle('dark')">
 <span class="material-symbols-outlined">dark_mode</span>
